--- a/CSE_360_PROJECT/InstructorPage/Instructor.fxml
+++ b/CSE_360_PROJECT/InstructorPage/Instructor.fxml
@@ -7,7 +7,7 @@
 <?import javafx.scene.shape.Rectangle?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane fx:id="studentspage" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="519.0" prefWidth="536.0" style="-fx-background-color: #34eb49;" xmlns="http://javafx.com/javafx/23" xmlns:fx="http://javafx.com/fxml/1" fx:controller="InstructorPage.InstructorPageController">
+<AnchorPane fx:id="studentspage" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="519.0" prefWidth="536.0" style="-fx-background-color: #34eb49;" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="InstructorPage.InstructorPageController">
    <children>
       <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#16c42a" height="178.0" layoutX="-41.0" layoutY="14.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="511.0" />
       <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#169425" height="233.0" layoutY="-17.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="560.0" />
@@ -25,8 +25,8 @@
       <Button fx:id="CreateHelpArticle" layoutX="29.0" layoutY="295.0" mnemonicParsing="false" onAction="#createArticle" prefHeight="26.0" prefWidth="93.0" stylesheets="@application.css" text="Create Articles" textFill="WHITE" />
       <Button fx:id="HelpArticle_Delete1" layoutX="29.0" layoutY="384.0" mnemonicParsing="false" onAction="#HelpArticle_delete1" prefHeight="26.0" prefWidth="93.0" stylesheets="@application.css" text="Delete Articles" textFill="WHITE" />
       <Button fx:id="ListHelpArticles" layoutX="28.0" layoutY="255.0" mnemonicParsing="false" onAction="#ListHelpArticles" prefHeight="26.0" prefWidth="98.0" stylesheets="@application.css" text="View Articles" textFill="WHITE" />
-      <Button fx:id="back_up_Article" layoutX="14.0" layoutY="475.0" mnemonicParsing="false" onAction="#back_up_Article" stylesheets="@application.css" text="Back Up Articles" textFill="WHITE" />
-      <Button fx:id="Restore_Article" layoutX="422.0" layoutY="473.0" mnemonicParsing="false" onAction="#Restore_Article" stylesheets="@application.css" text="Restore Articles" textFill="WHITE" />
+      <Button fx:id="back_up_Article" layoutX="26.0" layoutY="462.0" mnemonicParsing="false" onAction="#back_up_Article" prefHeight="25.0" prefWidth="78.0" stylesheets="@application.css" text="Back Up Articles" textFill="WHITE" />
+      <Button fx:id="Restore_Article" layoutX="29.0" layoutY="424.0" mnemonicParsing="false" onAction="#Restore_Article" prefHeight="25.0" prefWidth="93.0" stylesheets="@application.css" text="Restore Articles" textFill="WHITE" />
       <Button fx:id="EditHelpArticles" layoutX="26.0" layoutY="342.0" mnemonicParsing="false" onAction="#EditHelpArticles" prefHeight="26.0" prefWidth="98.0" stylesheets="@application.css" text="Edit Articles" textFill="WHITE" />
       <HBox alignment="CENTER" layoutX="173.0" layoutY="125.0" prefHeight="35.0" prefWidth="200.0" spacing="10.0">
          <children>
@@ -58,5 +58,6 @@
       <Button fx:id="ViewStudents_from_helpsystem" layoutX="220.0" layoutY="355.0" mnemonicParsing="false" onAction="#ViewStudents_from_helpsystem" prefHeight="26.0" prefWidth="102.0" stylesheets="@application.css" text="View Students" textFill="WHITE" />
       <Button fx:id="delete_Student_fromGeneralgroup" layoutX="395.0" layoutY="307.0" mnemonicParsing="false" onAction="#delete_Student_fromGeneralgroup" prefHeight="26.0" prefWidth="102.0" stylesheets="@application.css" text="Delete Students" textFill="WHITE" />
       <Button fx:id="view_from_general_group" layoutX="402.0" layoutY="355.0" mnemonicParsing="false" onAction="#view_from_general_group" prefHeight="26.0" prefWidth="102.0" stylesheets="@application.css" text="View Students" textFill="WHITE" />
+      <Button layoutX="443.0" layoutY="475.0" mnemonicParsing="false" text="Messages" />
    </children>
 </AnchorPane>
