--- a/CSE_360_PROJECT/Article/CreateSpecialArticle.fxml
+++ b/CSE_360_PROJECT/Article/CreateSpecialArticle.fxml
@@ -64,5 +64,11 @@
 			</font>
 		</Label>
 		<ChoiceBox fx:id="groupCategory" layoutX="275.0" layoutY="186.0" prefWidth="150.0" />
+      <ChoiceBox fx:id="studentArticleSend" layoutX="275.0" layoutY="259.0" prefWidth="150.0" />
+      <Label layoutX="282.0" layoutY="228.0" prefHeight="20.0" prefWidth="136.0" text="Send to Student">
+         <font>
+            <Font size="18.0" />
+         </font>
+      </Label>
 	</children>
 </AnchorPane>
