--- a/CSE_360_PROJECT/admin_Instructor/Admin_Instructor_Page.fxml
+++ b/CSE_360_PROJECT/admin_Instructor/Admin_Instructor_Page.fxml
@@ -9,7 +9,7 @@
 <?import javafx.scene.shape.Rectangle?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="408.0" prefWidth="780.0" style="-fx-background-color: dab2d8;" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="admin_Instructor.Admin_Instructor_Controller">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="408.0" prefWidth="780.0" style="-fx-background-color: dab2d8;" xmlns="http://javafx.com/javafx/23" xmlns:fx="http://javafx.com/fxml/1" fx:controller="admin_Instructor.Admin_Instructor_Controller">
    <children>
       <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#9a3995" height="200.0" layoutX="-3.0" layoutY="-15.0" width="799.0" />
       <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#6f0e6a" height="200.0" layoutX="-11.0" layoutY="-51.0" width="815.0" />
@@ -72,9 +72,6 @@
             </Label>
          </children>
       </HBox>
-
-      <Button fx:id="listClassesButton" layoutX="368.0" layoutY="195.0" onAction="#ListClasses" prefHeight="30.0" prefWidth="112.0" stylesheets="@application.css" text="List classes" textFill="WHITE" />
-      <Button fx:id="listStudentsButton" layoutX="368.0" layoutY="235.0" onAction="#ListStudents" prefHeight="30.0" prefWidth="112.0" stylesheets="@application.css" text="List students" textFill="WHITE" />
       <Button layoutX="668.0" layoutY="363.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="102.0" text="Messages" />
 
       <Button fx:id="listClassesButton" layoutX="166.0" layoutY="360.0" onAction="#ListClasses" prefHeight="30.0" prefWidth="112.0" stylesheets="@application.css" text="List classes" textFill="WHITE" />
@@ -90,18 +87,18 @@
             <Button fx:id="restoreHelpArticles_button" mnemonicParsing="false" prefHeight="25.0" prefWidth="159.0" stylesheets="@application.css" text="Restore Help Article" textFill="WHITE" />
          </children>
       </VBox>
-      <VBox layoutX="601.0" layoutY="316.0" prefHeight="26.0" prefWidth="133.0" spacing="20.0">
+      <VBox layoutX="313.0" layoutY="194.0" prefHeight="57.0" prefWidth="133.0" spacing="20.0">
          <children>
+            <Button fx:id="AddStudent_Button" onAction="#AddStudent_Button" prefHeight="30.0" prefWidth="132.0" stylesheets="@application.css" text="Add Student" textFill="WHITE" />
       
-                  <Button fx:id="AddClass_Button" onAction="#AddClass_Button" prefHeight="26.0" prefWidth="133.0" stylesheets="@application.css" text="Add Class" textFill="WHITE" />
+                        <Button fx:id="AddClass_Button" onAction="#AddClass_Button" prefHeight="26.0" prefWidth="133.0" stylesheets="@application.css" text="Add Class" textFill="WHITE" />
          </children></VBox>
-      <VBox layoutX="604.0" layoutY="192.0" prefHeight="35.0" prefWidth="127.0" spacing="20.0">
+      <VBox layoutX="604.0" layoutY="192.0" prefHeight="74.0" prefWidth="127.0" spacing="20.0">
          <children>
             <Button fx:id="RemoveStudent_Button" onAction="#RemoveStudent_Button" prefHeight="30.0" prefWidth="132.0" stylesheets="@application.css" text="Remove Student" textFill="WHITE" />
+            <Button fx:id="RemoveClass_Button" onAction="#removeClass" prefHeight="30.0" prefWidth="127.0" stylesheets="@application.css" text="Remove Class" textFill="WHITE" />
          </children>
       </VBox>
-      <Button fx:id="AddStudent_Button" layoutX="602.0" layoutY="265.0" onAction="#AddStudent_Button" prefHeight="30.0" prefWidth="132.0" stylesheets="@application.css" text="Add Student" textFill="WHITE" />
-      <Button fx:id="RemoveClass_Button" layoutX="602.0" layoutY="228.0" onAction="#removeClass" prefHeight="30.0" prefWidth="132.0" stylesheets="@application.css" text="Remove Class" textFill="WHITE" />
 
    </children>
 </AnchorPane>
