--- a/CSE_360_PROJECT/Messages/Help.fxml
+++ b/CSE_360_PROJECT/Messages/Help.fxml
@@ -1,14 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ChoiceBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-
-
-<AnchorPane prefHeight="301.0" prefWidth="315.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/23.0.1" fx:controller = "Messages.MessageController">
+<AnchorPane prefHeight="301.0" prefWidth="315.0" xmlns="http://javafx.com/javafx/23" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Messages.MessageController">
    <children>
       <AnchorPane layoutX="-106.0" layoutY="-103.0" prefHeight="200.0" prefWidth="227.0" />
       <Label layoutX="69.0" layoutY="25.0" prefHeight="72.0" prefWidth="195.0" text="Ask for help">
@@ -16,13 +15,16 @@
             <Font size="32.0" />
          </font>
       </Label>
-<Button fx:id="AdminInstructor" layoutX="32.0" layoutY="238.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="109.0" text="Admin Instructor" onAction="#handleFinishAdminIns"/>
-<Button fx:id="YourInstructor" layoutX="167.0" layoutY="238.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="109.0" text="Your Instructor" onAction="#handleFinishInstructor"/>
 <TextField fx:id="message_Input" layoutX="32.0" layoutY="126.0" prefHeight="25.0" prefWidth="215.0" promptText="I don't know what to do" />
       <Label layoutX="32.0" layoutY="97.0" prefHeight="17.0" prefWidth="138.0" text="Send something:">
          <font>
             <Font size="18.0" />
          </font>
       </Label>
+      <ChoiceBox fx:id="adminInstructorChoiceBox" layoutX="22.0" layoutY="205.0" prefHeight="25.0" prefWidth="129.0" />
+      <ChoiceBox fx:id="InstructorChoiceBox" layoutX="178.0" layoutY="205.0" prefHeight="25.0" prefWidth="129.0" />
+      <Label layoutX="9.0" layoutY="188.0" text="Message admin instructor:" />
+      <Label layoutX="173.0" layoutY="188.0" text="Message instructor:" />
+      <Button layoutX="123.0" layoutY="262.0" mnemonicParsing="false" onAction="#insertMessage" prefHeight="25.0" prefWidth="87.0" text="submit" />
    </children>
 </AnchorPane>
