--- a/CSE_360_PROJECT/StudentPage/Student.fxml
+++ b/CSE_360_PROJECT/StudentPage/Student.fxml
@@ -3,31 +3,40 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.text.Font?>
 
-
-
-<AnchorPane fx:id="studentspage" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="430.0" prefWidth="472.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="StudentPage.StudentpageController">
+<AnchorPane fx:id="studentspage" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="430.0" prefWidth="472.0" style="-fx-background-color: #c22108;" xmlns="http://javafx.com/javafx/23" xmlns:fx="http://javafx.com/fxml/1" fx:controller="StudentPage.StudentpageController">
    <children>
       <Button fx:id="studentLogout" layoutX="151.0" layoutY="371.0" mnemonicParsing="false" onAction="#logout" text="Log out" />
-      <Label fx:id="TitleLabel" layoutX="94.0" layoutY="56.0" text="Welcome to Student page!">
+      <Label fx:id="TitleLabel" alignment="CENTER" layoutX="85.0" layoutY="34.0" text="Welcome to Student page!" textAlignment="CENTER" textFill="WHITE">
          <font>
-            <Font size="24.0" />
+            <Font name="System Bold" size="24.0" />
          </font>
       </Label>
-      <Label layoutX="164.0" layoutY="105.0" text="Hello">
-         <font>
-            <Font size="20.0" />
-         </font>
-      </Label>
-      <Label fx:id="UserLabel" layoutX="236.0" layoutY="105.0" text="User">
-         <font>
-            <Font size="20.0" />
-         </font>
-      </Label>
-     <Button fx:id="searchButton" layoutX="111.0" layoutY="175.0" mnemonicParsing="false" onAction="#loadSearchArticlesPage" text="View Article" />
-      <Button layoutX="252.0" layoutY="175.0" mnemonicParsing="false" onAction="#ListArtilces" text="List Articles" />
+     <Button fx:id="searchButton" layoutX="112.0" layoutY="227.0" mnemonicParsing="false" onAction="#loadSearchArticlesPage" text="View Article" />
+      <Button layoutX="258.0" layoutY="227.0" mnemonicParsing="false" onAction="#ListArtilces" text="List Articles" />
       <Button layoutX="411.0" layoutY="371.0" mnemonicParsing="false" onAction="#HelpPage" text="Help" />
       <Button layoutX="236.0" layoutY="371.0" mnemonicParsing="false" onAction="#MessageList" text="Messages" />
+      <HBox alignment="CENTER" layoutX="128.0" layoutY="102.0" prefHeight="25.0" prefWidth="200.0" spacing="10.0">
+         <children>
+            <Label text="Hello" textFill="WHITE">
+               <font>
+                  <Font name="System Bold" size="20.0" />
+               </font>
+            </Label>
+            <Label fx:id="UserLabel" text="User" textFill="WHITE">
+               <font>
+                  <Font name="System Bold" size="20.0" />
+               </font>
+            </Label>
+         </children>
+      </HBox>
+      <HBox layoutX="128.0" layoutY="156.0" prefHeight="17.0" prefWidth="200.0" spacing="5.0">
+         <children>
+            <Label text="Enrolled classes:" textFill="#acff06" />
+            <Label fx:id="ClassesLabel" text="class" textFill="#acff06" />
+         </children>
+      </HBox>
    </children>
 </AnchorPane>
