--- a/CSE_360_PROJECT/Article/EditArticle.fxml
+++ b/CSE_360_PROJECT/Article/EditArticle.fxml
@@ -3,15 +3,16 @@
 <!-- Import necessary JavaFX controls -->
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ChoiceBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextArea?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="492.0" prefWidth="474.0" xmlns="http://javafx.com/javafx/23" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Article.ArticleController">
+<AnchorPane prefHeight="492.0" prefWidth="474.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Article.ArticleController">
 	<children>
-		<Label layoutX="109.0" layoutY="25.0" prefHeight="51.0" prefWidth="266.0" text="Edit  article" textAlignment="CENTER" textFill="#030303">
+		<Label layoutX="109.0" layoutY="25.0" prefHeight="51.0" prefWidth="266.0" text="Setup an article" textAlignment="CENTER" textFill="#030303">
 			<font>
 				<Font size="28.0" />
 			</font>
@@ -57,5 +58,11 @@
 		<TextArea fx:id="Links_textArea" layoutX="30.0" layoutY="411.0" prefHeight="51.0" prefWidth="416.0" promptText="google.com" />
 
 		<Button fx:id="finish_button" layoutX="110.0" layoutY="467.0" mnemonicParsing="false" onAction="#handleFinishArticle" prefHeight="25.0" prefWidth="207.0" text="Finish Article" />
+		<Label layoutX="282.0" layoutY="159.0" prefHeight="20.0" prefWidth="136.0" text="Class Category">
+			<font>
+				<Font size="18.0" />
+			</font>
+		</Label>
+		<ChoiceBox fx:id="groupCategory" layoutX="275.0" layoutY="186.0" prefWidth="150.0" />
 	</children>
 </AnchorPane>
