--- a/CSE_360_PROJECT/InstructorPage/Instructor.fxml
+++ b/CSE_360_PROJECT/InstructorPage/Instructor.fxml
@@ -47,8 +47,8 @@
       </VBox>
       <VBox layoutX="214.0" layoutY="249.0" prefHeight="83.0" prefWidth="109.0" spacing="20.0">
          <children>
-            <Button fx:id="Add_Student_ToHelpSystem" mnemonicParsing="false" onAction="#Add_Student_ToHelpSystem" prefHeight="26.0" prefWidth="112.0" stylesheets="@application.css" text="Message student" textFill="WHITE" />
-            <Button fx:id="DeleteStudents_from_helpsystem" mnemonicParsing="false" onAction="#DeleteStudents_from_helpsystem" prefHeight="26.0" prefWidth="171.0" stylesheets="@application.css" text="View messages" textFill="WHITE" />
+            <Button fx:id="Add_Student_ToHelpSystem" mnemonicParsing="false" onAction="#HelpPage" prefHeight="26.0" prefWidth="112.0" stylesheets="@application.css" text="Message student" textFill="WHITE" />
+            <Button fx:id="DeleteStudents_from_helpsystem" mnemonicParsing="false" onAction="#MessageList" prefHeight="26.0" prefWidth="171.0" stylesheets="@application.css" text="View messages" textFill="WHITE" />
          </children>
       </VBox>
       <VBox layoutX="401.0" layoutY="249.0" prefHeight="132.0" prefWidth="109.0" spacing="20.0">
